--- a/package.json
+++ b/package.json
@@ -1,23 +1,46 @@
 {
+  "name": "budget-planner",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "@reduxjs/toolkit": "^1.9.7",
-    "react-redux": "^8.1.3",
     "react-hook-form": "^7.48.2",
-    "recharts": "^2.10.3",
     "react-hot-toast": "^2.4.1",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.294.0"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0",
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.10.3",
+    "typescript": "^4.9.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
+    "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
